update stories for listbox section renders. add minor fix for bullet list flicker

--- a/packages/select/src/FilterMultiSelect/components/ListBox/ListBox.module.scss
+++ b/packages/select/src/FilterMultiSelect/components/ListBox/ListBox.module.scss
@@ -15,4 +15,10 @@
 
 .hidden {
   display: none;
+  list-style: none;
+}
+
+// this is a div but remove styles briefly flickering to a bullet list as the sections are removed
+.noResultsWrapper {
+  list-style: none;
 }
